fixed scrollbar on feed page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,3 @@
-img {
-    width: 100%;
-    height: 100%;
-  }
-  
+ion-app {
+  background-color: white;
+}
