--- a/src/app/pages/main/feed/feed.page.scss
+++ b/src/app/pages/main/feed/feed.page.scss
@@ -1,7 +1,8 @@
 .feed {
-    position: relative;
     overflow: hidden auto;
+    position: relative;
     max-height: 100%;
+    height: 100vh;
 
     .detail {
         position: fixed;
